@@ -1,3 +1,3 @@
 <SkinDocType>
-	<![CDATA[<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">]]>
+  <![CDATA[<!DOCTYPE html>]]>
 </SkinDocType>
